[project]
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = []
description = ""
name = "lucas-mc-tool-pack"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.poetry]
packages = [{include = "lmtp", from = "python/src"}]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
